// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageHero (Deprecated) has breadcrumb 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
    >
      <div>
        breadcrumb/mybread
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageHero (Deprecated) has left content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
    >
      <div
        className="PageHero__StyledLeftContent-sc-1k4oefb-5 nKrTg"
      >
        <div>
          Left Content
        </div>
      </div>
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            Your Devices
          </h1>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageHero (Deprecated) normal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
    >
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            Your Devices
          </h1>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageHero (Deprecated) normal with content switcher 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
    >
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            Your Devices
          </h1>
        </div>
        <div
          className="bx--content-switcher PageSwitcher__StyledContentSwitcher-sc-1dcz28n-0 jasjRR"
          onChange={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="bx--content-switcher-btn"
            data-tip="All Devices"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex="-1"
            type="button"
          >
            <span
              className="bx--content-switcher__label"
            >
              All Devices
            </span>
          </button>
          <button
            aria-selected={true}
            className="bx--content-switcher-btn bx--content-switcher--selected"
            data-tip="Diagnose"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="bx--content-switcher__label"
            >
              Diagnose
            </span>
          </button>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageHero (Deprecated) with section 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
    >
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            <span
              className="PageTitle__StyledPageSection-sc-1x4wg61-1 dUHWaW"
            >
              Explore /
            </span>
            Your Devices
          </h1>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;
